--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.16.2",
+    "@ant-design/icons": "^5.2.5",
+    "antd": "^5.8.4",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "emotion-theming": "^11.0.0",
     "next": "13.4.19",
-    "postcss": "8.4.29",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-use": "^17.4.0",
     "tailwindcss": "3.3.3"
   }
 }
